...
  <!-- Summary of a two action preference [CHAR_LIMIT=70]-->
  <string name="summary_twoaction_preference">A widget should be visible on the right</string>
  <!-- Summary of the deprecated two action preference [CHAR_LIMIT=70]-->
  <string name="summary_deprecated_twoaction_preference">The deprecated version of TwoActionPreference</string>

  <!-- Title of a checkbox preference [CHAR_LIMIT=31]-->
  <string name="title_checkbox_preference">Checkbox preference</string>
  <!-- Summary of a checkbox preference [CHAR_LIMIT=78]-->
  <string name="summary_checkbox_preference">Tap anywhere in this preference to toggle state</string>

  <!-- Title of a switch preference [CHAR_LIMIT=28]-->
  <string name="title_switch_preference">Switch preference</string>
  <!-- Title of a primary switch preference [CHAR_LIMIT=28]-->
  <string name="title_primary_switch_preference">Primary switch preference</string>
  <!-- Summary of a switch preference [CHAR_LIMIT=78]-->
  <string name="summary_switch_preference">Tap anywhere in this preference to toggle state</string>

  <!-- Title of a dropdown preference [CHAR_LIMIT=31]-->
...
  <!-- Title of an edittext preference [CHAR_LIMIT=32]-->
  <string name="title_edittext_preference">EditText preference</string>
  <!-- Title of the dialog for an edittext preference [CHAR_LIMIT=43]-->
  <string name="dialog_title_edittext_preference">This title can be changed!</string>

  <!-- Title of a list preference [CHAR_LIMIT=25]-->
  <string name="title_list_preference">List preference</string>
  <!-- Title of the dialog for a list preference [CHAR_LIMIT=30]-->
  <string name="dialog_title_list_preference">Choose one option!</string>

  <!-- Title of a multi-select list preference [CHAR_LIMIT=46]-->
  <string name="title_multi_list_preference">Multi-select list preference</string>
  <!-- Summary of a multi-select list preference [CHAR_LIMIT=71]-->
  <string name="summary_multi_list_preference">Shows a dialog with multiple choice options</string>
  <!-- Title of the dialog for a multi-select list preference [CHAR_LIMIT=33]-->
  <string name="dialog_title_multi_list_preference">Choose some options!</string>

  <!--This section is for advanced attributes-->
...
