/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.android.car.ui.preference;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isFocused;
import static androidx.test.espresso.matcher.ViewMatchers.isNotChecked;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static com.android.car.ui.actions.ViewActions.setProgress;
import static com.android.car.ui.core.CarUi.MIN_TARGET_API;
import static com.android.car.ui.matchers.ViewMatchers.isActivated;
import static com.android.car.ui.matchers.ViewMatchers.withIndex;

import static junit.framework.Assert.assertFalse;
import static junit.framework.TestCase.assertEquals;
import static junit.framework.TestCase.assertTrue;

import static org.hamcrest.Matchers.not;
import static org.mockito.ArgumentMatchers.any;
import static org.mockito.ArgumentMatchers.anyBoolean;
import static org.mockito.ArgumentMatchers.eq;
import static org.mockito.Mockito.mock;
import static org.mockito.Mockito.times;
import static org.mockito.Mockito.verify;
import static org.mockito.Mockito.when;

import android.annotation.TargetApi;
import android.app.AlertDialog;
import android.content.DialogInterface;
import android.content.res.Resources;
import android.view.KeyEvent;
import android.view.View;

import androidx.preference.CheckBoxPreference;
import androidx.preference.DropDownPreference;
import androidx.preference.EditTextPreference;
import androidx.preference.Preference;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.rule.ActivityTestRule;

import com.android.car.ui.test.R;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;

import java.util.HashSet;
import java.util.Set;
import java.util.function.Consumer;

/**
 * Unit tests for {@link CarUiPreference}.
 */
@TargetApi(MIN_TARGET_API)
public class PreferenceTest {

    private PreferenceTestActivity mActivity;
    private String[] mEntries;
    private String[] mEntriesValues;

    @Rule
    public ActivityTestRule<PreferenceTestActivity> mActivityRule =
            new ActivityTestRule<>(PreferenceTestActivity.class);

    @Before
    public void setUp() {
        mActivity = mActivityRule.getActivity();
        Resources resources = mActivity.getResources();
        mEntries = resources.getStringArray(R.array.entries);
        mEntriesValues = resources.getStringArray(R.array.entry_values);
    }

    @Test
    public void testListPreference() {
        // Scroll until list preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("list"));

        // Display full screen list preference.
        onView(withText(R.string.title_list_preference)).perform(click());

        Preference.OnPreferenceChangeListener mockListener = mock(
                Preference.OnPreferenceChangeListener.class);
        when(mockListener.onPreferenceChange(any(), any())).thenReturn(true);
        mActivity.setOnPreferenceChangeListener("list", mockListener);

        // Check that no option is initially selected.
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 1))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 2))
                .check(matches(isNotChecked()));

        // Select first option.
        onView(withText(mEntries[0])).perform(click());
        // Check that first option is selected.
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 0))
                .check(matches(isChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 1))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 2))
                .check(matches(isNotChecked()));

        // Press back to save selection.
        onView(withContentDescription("Back")).perform(click());
        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(mEntriesValues[0]));

        onView(withText(R.string.title_list_preference)).perform(click());

        // Check that first option is selected.
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 0))
                .check(matches(isChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 1))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 2))
                .check(matches(isNotChecked()));

        // Select second option.
        onView(withText(mEntries[1])).perform(click());
        // Check that second option is selected.
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 0))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 1))
                .check(matches(isChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 2))
                .check(matches(isNotChecked()));

        // Press back to save selection.
        onView(withContentDescription("Back")).perform(click());
        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(mEntriesValues[1]));
        // Return to list preference screen.
        onView(withText(R.string.title_list_preference)).perform(click());

        // Check that second option is selected.
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 0))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 1))
                .check(matches(isChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 2))
                .check(matches(isNotChecked()));

        // Rotary focus test
        // Return to main screen and turn off touch mode.
        onView(withContentDescription("Back")).perform(click());
        InstrumentationRegistry.getInstrumentation().setInTouchMode(false);
        // Return to list preference screen. Requires two inputs to focus and then click.
        InstrumentationRegistry.getInstrumentation()
                .sendKeyDownUpSync(KeyEvent.KEYCODE_DPAD_CENTER);
        InstrumentationRegistry.getInstrumentation()
                .sendKeyDownUpSync(KeyEvent.KEYCODE_DPAD_CENTER);
        // Check that second option is selected and focused.
        onView(withIndex(withId(R.id.car_ui_list_item_radio_button_widget), 1))
                .check(matches(isChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_touch_interceptor), 1))
                .check(matches(isFocused()));
    }

    @Test
    public void testListPreference_uxRestricted() {
        // Scroll until list preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("list_ux_restricted"));

        // Check that UX restriction is enabled
        CarUiListPreference preference = (CarUiListPreference) mActivity.findPreference(
                "list_ux_restricted");
        assertTrue(preference.isUxRestricted());

        // Set listener
        Consumer<Preference> clickListener = mock(Consumer.class);
        preference.setOnClickWhileRestrictedListener(clickListener);
        assertEquals(clickListener, preference.getOnClickWhileRestrictedListener());

        // Click on ux restricted preference
        onView(withText(R.string.title_list_preference_ux_restricted)).perform(click());
        verify(clickListener, times(1)).accept(preference);
    }

    @Test
    public void testMultiSelectListPreference() {
        // Scroll until multi-select preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("multi_select_list"));

        // Display full screen list preference.
        onView(withText(R.string.title_multi_list_preference)).perform(click());

        Preference.OnPreferenceChangeListener mockListener = mock(
                Preference.OnPreferenceChangeListener.class);
        when(mockListener.onPreferenceChange(any(), any())).thenReturn(true);
        mActivity.setOnPreferenceChangeListener("multi_select_list", mockListener);

        // Check that no option is initially selected.
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 0))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 1))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 2))
                .check(matches(isNotChecked()));

        // Select options 1 and 3.
        onView(withText(mEntries[0])).perform(click());
        onView(withText(mEntries[2])).perform(click());

        // Check that selections are correctly reflected.
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 0))
                .check(matches(isChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 1))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 2))
                .check(matches(isChecked()));

        // Press back to save selection.
        onView(withContentDescription("Back")).perform(click());
        Set<String> expectedUpdate = new HashSet<>();
        expectedUpdate.add(mEntriesValues[0]);
        expectedUpdate.add(mEntriesValues[2]);
        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(expectedUpdate));

        // Return to multi-select list preference screen.
        onView(withText(R.string.title_multi_list_preference)).perform(click());

        // Check that selections are correctly reflected.
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 0))
                .check(matches(isChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 1))
                .check(matches(isNotChecked()));
        onView(withIndex(withId(R.id.car_ui_list_item_checkbox_widget), 2))
                .check(matches(isChecked()));
    }

    @Test
    public void testMultiSelectListPreference_uxRestricted() {
        // Scroll until list preference is visible
        mActivity.runOnUiThread(
                () -> mActivity.scrollToPreference("multi_select_list_ux_restricted"));

        // Check that UX restriction is enabled
        CarUiMultiSelectListPreference preference =
                (CarUiMultiSelectListPreference) mActivity.findPreference(
                        "multi_select_list_ux_restricted");
        assertTrue(preference.isUxRestricted());

        // Set listener
        Consumer<Preference> clickListener = mock(Consumer.class);
        preference.setOnClickWhileRestrictedListener(clickListener);
        assertEquals(clickListener, preference.getOnClickWhileRestrictedListener());

        // Click on ux restricted preference
        onView(withText(R.string.title_multi_list_preference_ux_restricted)).perform(click());
        verify(clickListener, times(1)).accept(preference);
    }

    @Test
    public void testCheckboxPreference() {
        // Create checkbox preference and add it to screen.
        CheckBoxPreference preference = new CheckBoxPreference(mActivity);
        preference.setOrder(0);
        preference.setKey("checkbox");
        preference.setTitle(R.string.title_checkbox_preference);
        preference.setSummary(R.string.summary_compound_button_preference);
        mActivity.addPreference(preference);

        // Scroll until list preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("checkbox"));

        // Check title and summary are displayed as expected.
        onView(withIndex(withId(android.R.id.title), 0)).check(matches(
                withText(mActivity.getString(R.string.title_checkbox_preference))));
        onView(withIndex(withId(android.R.id.summary), 0)).check(matches(
                withText(mActivity.getString(R.string.summary_compound_button_preference))));

        // Ensure checkbox preference is initially not selected.
        onView(withId(android.R.id.checkbox)).check(matches(isNotChecked()));

        Preference.OnPreferenceChangeListener mockListener = mock(
                Preference.OnPreferenceChangeListener.class);
        when(mockListener.onPreferenceChange(any(), any())).thenReturn(true);
        mActivity.setOnPreferenceChangeListener("checkbox", mockListener);

        // Select checkbox preference.
        onView(withText(R.string.title_checkbox_preference)).perform(click());

        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(true));

        // Verify checkbox preference correctly indicates preference is selected.
        onView(withId(android.R.id.checkbox)).check(matches(isChecked()));

        // Un-select checkbox preference.
        onView(withText(R.string.title_checkbox_preference)).perform(click());

        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(false));

        // Verify checkbox preference correctly indicates preference is selected.
        onView(withId(android.R.id.checkbox)).check(matches(isNotChecked()));
    }

    @Test
    public void testSwitchPreference() {
        // Create switch preference and add it to screen.
        CarUiSwitchPreference preference = new CarUiSwitchPreference(mActivity);
        preference.setOrder(0);
        preference.setKey("switch");
        preference.setTitle(R.string.title_switch_preference);
        preference.setSummary(R.string.summary_compound_button_preference);
        mActivity.addPreference(preference);

        // Scroll until list preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("switch"));

        // Check title and summary are displayed as expected.
        onView(withIndex(withId(android.R.id.title), 0)).check(matches(
                withText(mActivity.getString(R.string.title_switch_preference))));
        onView(withIndex(withId(android.R.id.summary), 0)).check(matches(
                withText(mActivity.getString(R.string.summary_compound_button_preference))));

        // Ensure switch preference is initially not selected.
        onView(withId(android.R.id.switch_widget)).check(matches(isNotChecked()));

        Preference.OnPreferenceChangeListener mockListener = mock(
                Preference.OnPreferenceChangeListener.class);
        when(mockListener.onPreferenceChange(any(), any())).thenReturn(true);
        mActivity.setOnPreferenceChangeListener("switch", mockListener);

        // Select switch preference.
        onView(withText(R.string.title_switch_preference)).perform(click());

        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(true));

        // Verify switch preference correctly indicates preference is selected.
        onView(withId(android.R.id.switch_widget)).check(matches(isChecked()));

        // Un-select switch preference.
        onView(withText(R.string.title_switch_preference)).perform(click());

        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(false));

        // Verify switch preference correctly indicates preference is selected.
        onView(withId(android.R.id.switch_widget)).check(matches(isNotChecked()));
    }

    @Test
    public void testPrimarySwitchPreference() {
        // Create switch preference and add it to screen.
        CarUiPrimarySwitchPreference preference = new CarUiPrimarySwitchPreference(mActivity);
        preference.setOrder(0);
        preference.setKey("switch");
        preference.setTitle(R.string.title_switch_preference);
        preference.setSummary(R.string.summary_compound_button_preference);
        mActivity.addPreference(preference);

        // Scroll until list preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("switch"));

        // Check title and summary are displayed as expected.
        onView(withIndex(withId(android.R.id.title), 0)).check(matches(
                withText(mActivity.getString(R.string.title_switch_preference))));
        onView(withIndex(withId(android.R.id.summary), 0)).check(matches(
                withText(mActivity.getString(R.string.summary_compound_button_preference))));

        // Ensure switch preference is initially not selected.
        onView(withId(android.R.id.switch_widget)).check(matches(isNotChecked()));

        Preference.OnPreferenceChangeListener mockListener = mock(
                Preference.OnPreferenceChangeListener.class);
        when(mockListener.onPreferenceChange(any(), any())).thenReturn(true);
        mActivity.setOnPreferenceChangeListener("switch", mockListener);

        // Select switch preference.
        onView(withText(R.string.title_switch_preference)).perform(click());

        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(true));

        // Verify switch preference correctly indicates preference is selected.
        onView(withId(android.R.id.switch_widget)).check(matches(isChecked()));
        onView(withText(R.string.title_switch_preference)).check(matches(isActivated()));

        // Un-select switch preference.
        onView(withText(R.string.title_switch_preference)).perform(click());

        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(false));

        // Verify switch preference correctly indicates preference is selected.
        onView(withId(android.R.id.switch_widget)).check(matches(isNotChecked()));
        onView(withText(R.string.title_switch_preference)).check(matches(not(isActivated())));
    }

    @Test
    public void testSwitchPreference_uxRestricted() {
        // Create switch preference and add it to screen.
        CarUiSwitchPreference preference = new CarUiSwitchPreference(mActivity);
        preference.setOrder(0);
        preference.setKey("switch");
        preference.setTitle(R.string.title_switch_preference);
        preference.setSummary(R.string.summary_compound_button_preference);
        preference.setUxRestricted(true);
        mActivity.addPreference(preference);

        // Scroll until switch preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("switch"));

        // Check title and summary are displayed as expected.
        onView(withIndex(withId(android.R.id.title), 0)).check(matches(
                withText(mActivity.getString(R.string.title_switch_preference))));
        onView(withIndex(withId(android.R.id.summary), 0)).check(matches(
                withText(mActivity.getString(R.string.summary_compound_button_preference))));

        assertTrue(preference.isUxRestricted());

        // Set listener
        Consumer<Preference> clickListener = mock(Consumer.class);
        preference.setOnClickWhileRestrictedListener(clickListener);
        assertEquals(clickListener, preference.getOnClickWhileRestrictedListener());

        // Click on ux restricted preference
        onView(withText(R.string.title_switch_preference)).perform(click());
        verify(clickListener, times(1)).accept(preference);
    }

    @Test
    public void testSwitchPreference_clickableWhileDisabled() {
        // Create switch preference and add it to screen.
        CarUiSwitchPreference preference = new CarUiSwitchPreference(mActivity);
        preference.setOrder(0);
        preference.setKey("switch");
        preference.setTitle(R.string.title_switch_preference);
        preference.setSummary(R.string.summary_compound_button_preference);
        preference.setEnabled(false);
        preference.setClickableWhileDisabled(true);
        mActivity.addPreference(preference);

        // Scroll until switch preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("switch"));

        // Check title and summary are displayed as expected.
        onView(withIndex(withId(android.R.id.title), 0)).check(matches(
                withText(mActivity.getString(R.string.title_switch_preference))));
        onView(withIndex(withId(android.R.id.summary), 0)).check(matches(
                withText(mActivity.getString(R.string.summary_compound_button_preference))));

        assertTrue(preference.isClickableWhileDisabled());

        // Set listener
        Consumer<Preference> clickListener = mock(Consumer.class);
        preference.setDisabledClickListener(clickListener);
        assertEquals(clickListener, preference.getDisabledClickListener());

        // Click on disabled preference
        onView(withText(R.string.title_switch_preference)).perform(click());
        verify(clickListener, times(1)).accept(preference);
    }

    @Test
    public void testRadioPreference() {
        // Create radio button preference and add it to screen.
        CarUiRadioButtonPreference preference = new CarUiRadioButtonPreference(mActivity);
        preference.setOrder(0);
        preference.setKey("radio_button");
        preference.setTitle(R.string.title_radio_button_preference);
        preference.setSummary(R.string.summary_compound_button_preference);
        mActivity.addPreference(preference);

        // Scroll until list preference is visible
        mActivity.runOnUiThread(() -> mActivity.scrollToPreference("radio_button"));

        // Check title and summary are displayed as expected.
        onView(withIndex(withId(android.R.id.title), 0)).check(matches(
                withText(mActivity.getString(R.string.title_radio_button_preference))));
        onView(withIndex(withId(android.R.id.summary), 0)).check(matches(
                withText(mActivity.getString(R.string.summary_compound_button_preference))));

        // Ensure radio button preference is initially not selected.
        onView(withId(R.id.radio_button)).check(matches(isNotChecked()));

        Preference.OnPreferenceChangeListener mockListener = mock(
                Preference.OnPreferenceChangeListener.class);
        when(mockListener.onPreferenceChange(any(), any())).thenReturn(true);
        mActivity.setOnPreferenceChangeListener("radio_button", mockListener);

        // Select radio button preference.
        onView(withText(R.string.title_radio_button_preference)).perform(click());

        // Verify preference value was updated.
        verify(mockListener, times(1)).onPreferenceChange(any(), eq(true));

